--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Deploy to Minikube
+name: CI - Build and Push Docker Image
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +21,3 @@ jobs:
 
     - name: Push da imagem
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/monitor
-
-    - name: Configurar kubectl
-      run: |
-        echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > kubeconfig
-        export KUBECONFIG=$PWD/kubeconfig
-
-    - name: Aplicar manifests no Minikube
-      run: kubectl apply -f k8s/
