--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "express": "^5.1.0",
-    "prom-client": "^15.1.3"
+    "express": "5.1.0",
+    "prom-client": "15.1.3"
   }
 }
