--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "express": "5.1.0",
     "prom-client": "15.1.3"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
