--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,20 +2,24 @@ name: CD - Deploy to Minikube
 
 on:
   workflow_run:
-    workflows: ["CI - Build and Push Docker Image"]
+    workflows: ["CI - Build & Push Docker"]
     types:
       - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    environment: production  # permite aprovação manual no GitHub
+    environment: production
 
     steps:
-      - name: Configurar kubectl
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Configurar kubeconfig
         run: |
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > kubeconfig
-          export KUBECONFIG=$PWD/kubeconfig
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | tr -d '\n' | base64 -d > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
 
       - name: Substituir porta da aplicação
         run: |
