--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,10 +30,10 @@ jobs:
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
-      - name: Iniciar Minikube
+      - name: Iniciar Minikube com containerd
         run: |
-          sudo minikube start --driver=none
-          echo "✅ Minikube iniciado"
+          sudo minikube start --driver=none --container-runtime=containerd
+          echo "✅ Minikube iniciado com containerd"
 
       - name: Substituir porta da aplicação
         run: |
