--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,27 +13,12 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Instalar dependências do Kubernetes
+      - name: Configurar kubeconfig
         run: |
-          sudo apt-get update
-          sudo apt-get install -y conntrack
-
-      - name: Instalar crictl
-        run: |
-          curl -LO https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.0/crictl-v1.29.0-linux-amd64.tar.gz
-          sudo tar -C /usr/local/bin -xzf crictl-v1.29.0-linux-amd64.tar.gz
-
-      - name: Instalar Minikube e kubectl
-        run: |
-          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube-linux-amd64 /usr/local/bin/minikube
-          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-
-      - name: Iniciar Minikube com containerd
-        run: |
-          sudo minikube start --driver=none --container-runtime=containerd
-          echo "✅ Minikube iniciado com containerd"
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | tr -d '\n' | base64 -d > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
+          echo "✅ kubeconfig configurado"
 
       - name: Substituir porta da aplicação
         run: |
