Corrige CD para rodar com push

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,16 +1,14 @@
 name: CD - Deploy to Kubernetes
 
 on:
-  workflow_run:
-    workflows: ["CI - Build & Push Docker"]
-    types: ["completed"]
+  push:
+    branches: [ "main" ]
 
 permissions:
   contents: read
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: production
 
@@ -22,7 +20,7 @@ jobs:
         id: vars
         run: |
           echo "IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/monitor" >> $GITHUB_OUTPUT
-          echo "TAG_SHA=$(echo '${{ github.event.workflow_run.head_sha }}' | cut -c1-7)" >> $GITHUB_OUTPUT
+          echo "TAG_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "NAMESPACE=${{ secrets.K8S_NAMESPACE || 'default' }}" >> $GITHUB_OUTPUT
 
       - name: Setup kubectl
@@ -30,48 +28,40 @@ jobs:
         with:
           version: 'latest'
 
-      - name: Configure kubeconfig (tolerante a erro)
+      - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config || echo "⚠️ Falha ao decodificar kubeconfig"
-          chmod 600 $HOME/.kube/config || true
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | tr -d '\n' | base64 -d > $HOME/.kube/config
+          chmod 600 $HOME/.kube/config
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
-          kubectl version --client || echo "⚠️ kubectl não conseguiu ler kubeconfig"
+          kubectl version --client
 
-      - name: Criar namespace se necessário (tolerante)
+      - name: Criar namespace se necessário
         run: |
           NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
-          kubectl get ns "$NAMESPACE" >/dev/null 2>&1 || kubectl create ns "$NAMESPACE" || echo "⚠️ Falha ao criar namespace"
+          kubectl get ns "$NAMESPACE" >/dev/null 2>&1 || kubectl create ns "$NAMESPACE"
 
-      - name: Aplicar base manifests (best-effort)
+      - name: Aplicar base manifests
         run: |
           NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
-          kubectl apply -n "$NAMESPACE" -f k8s/service.yaml || echo "⚠️ Falha service.yaml"
-          kubectl apply -n "$NAMESPACE" -f k8s/prometheus-deployment.yaml || echo "⚠️ Falha prometheus"
-          kubectl apply -n "$NAMESPACE" -f k8s/grafana-deployment.yaml || echo "⚠️ Falha grafana"
-          kubectl apply -n "$NAMESPACE" -f k8s/nginx-deployment.yaml || echo "⚠️ Falha nginx"
-          kubectl apply -n "$NAMESPACE" -f k8s/nginx-service.yaml || echo "⚠️ Falha nginx service"
-          kubectl apply -n "$NAMESPACE" -f k8s/prometheus-config.yaml || echo "⚠️ Falha prometheus config"
-
-      - name: Aplicar app deployment
-        run: |
-          NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
-          kubectl apply -n "$NAMESPACE" -f k8s/deployment.yaml || echo "⚠️ Falha deployment"
+          for file in k8s/*.yaml; do
+            kubectl apply -n "$NAMESPACE" -f "$file" || echo "⚠️ Falha em $file"
+          done
 
       - name: Atualizar imagem
         run: |
           NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
           IMAGE="${{ steps.vars.outputs.IMAGE }}"
           TAG_SHA="${{ steps.vars.outputs.TAG_SHA }}"
-          kubectl set image deployment/monitor monitor="$IMAGE:$TAG_SHA" -n "$NAMESPACE" --record || echo "⚠️ Falha ao atualizar imagem"
+          kubectl set image deployment/monitor monitor="$IMAGE:$TAG_SHA" -n "$NAMESPACE" --record
 
       - name: Aguardar rollout
         run: |
           NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
-          kubectl rollout status deployment/monitor -n "$NAMESPACE" --timeout=120s || echo "⚠️ Rollout falhou ou expirou"
+          kubectl rollout status deployment/monitor -n "$NAMESPACE" --timeout=120s
 
       - name: Mostrar serviços e pods
         run: |
           NAMESPACE="${{ steps.vars.outputs.NAMESPACE }}"
-          kubectl get svc -n "$NAMESPACE" || echo "⚠️ Falha ao listar serviços"
-          kubectl get pods -o wide -n "$NAMESPACE" || echo "⚠️ Falha ao listar pods"
+          kubectl get svc -n "$NAMESPACE"
+          kubectl get pods -o wide -n "$NAMESPACE"
