--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,16 @@
 name: CD - Deploy to Kubernetes
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["CI - Build & Push Docker"]
+    types: ["completed"]
 
 permissions:
   contents: read
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: production
 
@@ -20,7 +22,7 @@ jobs:
         id: vars
         run: |
           echo "IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/monitor" >> $GITHUB_OUTPUT
-          echo "TAG_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "TAG_SHA=$(echo '${{ github.event.workflow_run.head_sha }}' | cut -c1-7)" >> $GITHUB_OUTPUT
           echo "NAMESPACE=${{ secrets.K8S_NAMESPACE || 'default' }}" >> $GITHUB_OUTPUT
 
       - name: Setup kubectl
